# University

./: README.md
NASM/: exam_prep.asm  factorial.asm  lab11_proc_main.asm  lab3-e3.asm  lab3-e4.asm  lab3-e5.asm  lab4-e2.asm  new1.asm  new2.asm  new3.asm  new4.asm  new5.asm  tema8.asm  text.asm  transform.asm
Semester 1/Algebra/: README.md
Semester 1/Computational Logic/: README.md
Semester 1/Computer System Architecture/: README.md  lab6-e1.asm  lab8-e1.asm  practic.asm  printhex.asm  tema3.asm
Semester 1/Fundamentals Of Programming/: README.md
Semester 1/Fundamentals Of Programming/a1-AndreiFabianPop/: p1.py  p2.py  p3.py
Semester 1/Fundamentals Of Programming/e916-AndreiFabianPop/: README.md
Semester 1/Fundamentals Of Programming/seminar-02-x-916-g916/: s02
Semester 1/NASM/: ex1-modul.asm  ex2-modul.asm  lab11-e1-main.asm  lab11-e2-main.asm  lab3-e1.asm  lab3-e2.asm  lab3-e6.asm  lab4-e1.asm  lab4-e3.asm  lab5-e1.asm  lab5-e2.asm  lab6-e2.asm  lab8-e2.asm  new 1.asm  self-test.asm  tema1.asm  tema10.asm  tema2.asm  tema4.asm  tema5.asm  tema6.asm  tema7.asm  tema9.asm  test2.asm  test_practice.asm  tsts.asm  w2lab.asm
Semester 2/Data Structures and Algorithms/Bag/: App.cpp  Bag.cpp  Bag.h  (+6 more)
Semester 2/Data Structures and Algorithms/FixedCapBiMap/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  FixedCapBiMapIterator.cpp  FixedCapBiMapIterator.h  README.md  ShortTest.cpp
Semester 2/Data Structures and Algorithms/SortedBag/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  README.md  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Semester 2/Dynamical Systems/: Lab5_Sage.ipynb  Lab6.ipynb  README.md  Untitled3.ipynb  exam.ipynb  lab-31-03-2022.ipynb  pi_test.ipynb  plotting.ipynb
Semester 2/Geometry/: README.md
Semester 2/Graph Algorithms/: README.md
Semester 2/Graph Algorithms/practical5/practical1/AlgoGraph_practical1/: CMakeLists.txt  graph.h  main.cpp
Semester 2/Object Oriented Programming/: README.md
Semester 2/Object Oriented Programming/a3-4-AndreiFabianPop/: CMakeLists.txt
Semester 2/Object Oriented Programming/a3-4-AndreiFabianPop/src/: main.c
Semester 2/Object Oriented Programming/a3-4-AndreiFabianPop/src/domain/: medicine.c  medicine.h
Semester 2/Object Oriented Programming/a3-4-AndreiFabianPop/src/repository/: repository.c  repository.h
Semester 2/Object Oriented Programming/a3-4-AndreiFabianPop/src/service/: service.c  service.h
Semester 2/Object Oriented Programming/a3-4-AndreiFabianPop/src/tests/: tests.c  tests.h
Semester 2/Object Oriented Programming/a3-4-AndreiFabianPop/src/ui/: ui.c  ui.h
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/: CMakeLists.txt
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/src/: main.cpp
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/src/Domain/: Tutorial.cpp  Tutorial.h
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/src/DynamicVector/: DynamicVector.cpp  DynamicVector.h
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/src/Repository/: Repository.cpp  Repository.h
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/src/Service/: Service.cpp  Service.h
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/src/Tests/: Tests.cpp  Tests.h
Semester 2/Object Oriented Programming/a5-6-AndreiFabianPop/src/UI/: UI.cpp  UI.h
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/: CMakeLists.txt
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/: main.cpp
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/Domain/: Tutorial.cpp  Tutorial.h
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/ExceptionsAndValidators/: Exception.cpp  Exception.h  Validator.cpp  Validator.h
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/GUI/: GUI.cpp  GUI.h
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/Repository/: CSV_WatchList.cpp  CSV_WatchList.h  HTML_WatchList.cpp  HTML_WatchList.h  Repository.h  WatchList.h
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/Service/: Service.cpp  Service.h
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/Tests/: Tests.cpp  Tests.h
Semester 2/Object Oriented Programming/a8-9-AndreiFabianPop/src/UI/: UI.cpp  UI.h
Semester 2/Object Oriented Programming/e916-AndreiFabianPop-1/: Answer.cpp  Answer.h  CMakeLists.txt  Observer.cpp  Observer.h  QnA.cpp  QnA.h  Quastion.cpp  Quastion.h  User.cpp  User.h  UserList.cpp  UserList.h  main.cpp  searchw.cpp  searchw.h  searchw.ui  ui_SearchW.h  ui_UserWindow.h  userwindow.cpp  userwindow.h  userwindow.ui
Semester 2/Object Oriented Programming/t1-AndreiFabianPop-1/: CMakeLists.txt
Semester 2/Object Oriented Programming/t1-AndreiFabianPop-1/src/: main.cpp
Semester 2/Object Oriented Programming/t1-AndreiFabianPop-1/src/Repository/: Repository.cpp  Repository.h
Semester 2/Object Oriented Programming/t1-AndreiFabianPop-1/src/Service/: Service.cpp  Service.h
Semester 2/Object Oriented Programming/t1-AndreiFabianPop-1/src/UI/: UI.cpp  UI.h
Semester 2/Object Oriented Programming/t1-AndreiFabianPop-1/src/domain/: School.cpp  School.h
Semester 2/Object Oriented Programming/t3-AndreiFabianPop/: CMakeLists.txt  Document.cpp  Document.h  Repository.cpp  Repository.h  gui.cpp  gui.h  gui.ui  main.cpp  ui_GUI.h
Semester 2/Operating Systems/: README.md
Semester 3/Computer Networks/: Lab3.pkt  exam.pkt
Semester 3/Probabilities and Statistics/: ex1lab6.m  exam.m  lab1.m  lab2.m  lab3.m  lab3part2.m  lab6.m  lab6ex1self.m  mancare.m  pr14.m  practic_ex0.m  practic_ex14.m  practic_ex2.m  practic_ex5.m  randm.m  solutions.m  solutions2.m  solutions3.m
Semester 5/Parallel and Distributed Programming/Lab8/: CMakeLists.txt  configurations.h  group_timetable.cpp  group_timetable.h  main.cpp  timetable_generator.cpp  timetable_generator.h  timetable_generator_distributed.cpp  timetable_generator_distributed.h  timetable_generator_threadded.cpp  timetable_generator_threadded.h
(+576 files in other folders)
